# resonantos-alpha

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .shield-personal-data  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELEGATION_PROTOCOL.md  DOCKER.md  Dockerfile  ECONOMY_SPEC.md  GOVERNANCE.md  INSTALL.md  INSTALLATION_COMPONENTS.md  PUBLIC_README.md  README.md  RESEARCH_PROTOCOL.md  REVIEW_SUMMARY.md  SECURITY.md  SUPPORT.md  TASK.md  docker-compose.yml  install.js  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents/: README.md
agents/GITHUB/: GITHUB_PROJECT_AGENT_WORKFLOW.md
agents/setup/: AGENTS.md
android/: README.md
architecture/: NETWORK_ALIGNMENT.md  NFT_AGENT_IDENTITY.md
archive/legacy-dashboard/: README.md
archive/legacy-paths/: README.md
assets/: CORPORATE_VS_CREATIVE_DESIGN.md  DESIGN_GUIDE.md
config/: README.md
config/extensions/: README.md
content/: blog-openclaw-vs-nemoclaw-resonantos.html  blog-openclaw-vs-nemoclaw-resonantos.md  specification-engineering-article-2026-02.md
dashboard/: CHATBOT-AUDIT.md  COMPLETION_REPORT.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  LOGICIAN_SYNC_SPEC.md  README.md  README.md.deprecated  apply_setup.txt  build-release.sh  build.sh  config.example.json  config.json  config.json.bak  dashboard-watchdog.sh  features.py  modules.json  requirements.txt  server.py  server.py.deprecated  server_bounty_routes.py  server_v2.py  startup_validation.py
dashboard/.backup-20260222-174012/: nft_minter.py  server_v2.py  wallet.html
data/: daily_claims.json  nft_registry.json  onboarding.json  rct_caps.json
docs/: CODER_BEST_PRACTICES.md  DEV4-ALPHA-SPEC.md  GETTING-STARTED.md  REFACTORING-SUMMARY-2026-03-25-26.md  REFACTORING-SUMMARY-2026-03-27.md  SSOT_TEMPLATE.md  SUPPORTED-MATRIX.md  directory-inventory.md  startup-flow.md
experiments/: README.md
extensions/: README.md  gateway-lifecycle.js  r-memory.js  usage-tracker.js
hooks/: post-commit  pre-commit
install/: INSTALL_SPEC.yaml
logician/: .gitignore  PROJECT.md  README.md
logician-proxy/: package-lock.json  package.json  proxy.js
mcp-server/: README.md  package.json
r-awareness/: config.json  keywords.json  proxy.js
scripts/: README.md  TASK.md  backup.sh  dashboard-ctl.sh  disaster-recovery-audit.sh  gdrive-backup.sh  install-pre-push-hook.sh  memory-doorman.sh  memory-log-check.txt  morning-digest.py  rebuild-recent-headers.sh  regenerate-ai-md.sh  run-installer-v3.sh  sanitize-memory-write.py  sanitize-memory-write.py.bak  smoke-test.py  social-drafts-prompt.md  ssot-staleness-check.sh  sync-extensions.sh  ws-expiry-test.mjs  ws-multi-test.mjs  ws-test.mjs  youtube-weekly-report.py
security/: com.resonantos.token-rotation.plist  rotate_gateway_token.sh  token_rotation_ctl.sh
shield/: IMPROVEMENT_PROTOCOL.md  README.md  __init__.py  collect-model-pricing.sh  config.yaml  daemon.py  data_leak_scanner.py  file_guard.py  hook_guardian.sh  install_pre_push_hook.sh  model-pricing.json  shield-gate.index.js  shield-gate.js  shield_ctl.sh  skill-enforcement-gate.js  ssot-validator.js  test_file_guard.py  test_shield_layer_behavior.js  test_shield_layers.js  verifications.json  visibility_guard.sh
shield-gate/: index.js
skill-validator/: README.md  skill  skill_validator.py
skills/: README.md
solana-toolkit/: cli.py  nft_minter.py  symbiotic_client.py  test_toolkit.py  wallet.py
ssot/: README.md
symbiotic-wallet/: Anchor.toml  Cargo.toml
symbiotic-wallet/programs/symbiotic-wallet/: Cargo.toml
symbiotic-wallet/programs/symbiotic-wallet/src/: lib.rs
tools/: dev4_audit_server.py  sanitize-audit.py  sync-ssot-to-dashboard.py
watchdog/: com.resonantos.watchdog-health.plist  com.resonantos.watchdog.plist  watchdog-health.sh  watchdog.py
workspace-templates/: README.md  TOOLS.md
(+339 files in other folders)
