[package]
name = "symbiotic-wallet"
version = "0.1.0"
description = "Symbiotic Wallet — PDA vault for human+AI pairs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "symbiotic_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
blake3 = { workspace = true }
